[tool.poetry]
name = "ntust-pyvs"
version = "0.1.1"
description = "Automatically download virus from VirusShare"
authors = ["Hsiang-Jen Li <hsiangjenli@gmail.com>"]
readme = "README.md"
packages = [{include = "pyvs"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
beautifulsoup4 = "^4.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyvs = 'pyvs.cli:cli'